--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Jingyi Xu by jingyi</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -31,31 +31,21 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Assistant Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><p class="view"><a href="https://tyleransom.github.io/">Home</a></p></h3>
-        <h3><p class="view"><a href="https://tyleransom.github.io/research.html">Research</a></p></h3>
-    <h3><p class="view"><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></p></h3>  
-        <h3><p class="view"><a href="https://tyleransom.github.io/code.html">Code</a></p></h3> 
-        <h3><p class="view"><a href="https://tyleransom.github.io/teaching.html">Teaching</a></p></h3> 
-        <h3><p class="view"><a href="https://tyleransom.github.io/personal.html">Personal</a></p></h3>
+        <h1>Jingyi Xu</h1>
+        <p>Ph.D. student,  Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD)</p>
+    <h3><p class="view"><a href="https://Aralas.github.io/">Home</a></p></h3>
+        <h3><p class="view"><a href="https://Aralas.github.io/research.html">Research</a></p></h3>
     <p class="view"><b>Social</b><br>
-        <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-        <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-        <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-        <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-        <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-        <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-        <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+        <a href="mailto:jingyi_xu@mymail.sutd.edu.sg" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+        <a href="http://github.com/Aralas"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
 
     <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
       </header>
       <section>
       <h3>
       <img src="IMG_2409 edit pro photo square small.jpg" height="250" width="250"></h3>
-      <p>I am currently an Assistant Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
-      <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
+      <p>I am a second-year Ph.D. student in the <a href="https://istd.sutd.edu.sg/">Information Systems Technology and Design (ISTD) pillar</a> at <a href="https://sutd.edu.sg/">Singapore University of Technology and Design</a></p>. I am currently advised by Prof. <a href="https://istd.sutd.edu.sg/people/faculty/ernest-chong">Ernest Chong</a></p> and Prof. <a href="https://istd.sutd.edu.sg/people/faculty/tony-quek">Tony Quek</a></p>. Prior to that, I received my B.E. in Mathematical Sciences at Fudan University in July 2018.</p>
+      <p>My research interests lie in deep learning, computer vision, and data mining.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
