--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </header>
       <section>
       <h3>
-      <img src="IMG_2409 edit pro photo square small.jpg" height="250" width="250"></h3>
+      <img src="jingyi.jpg" height="300" width="180"></h3>
       <p>I am a second-year Ph.D. student in the <a href="https://istd.sutd.edu.sg/">Information Systems Technology and Design (ISTD) pillar</a> at <a href="https://sutd.edu.sg/">Singapore University of Technology and Design</a></p>. I am currently advised by Prof. <a href="https://istd.sutd.edu.sg/people/faculty/ernest-chong">Ernest Chong</a></p> and Prof. <a href="https://istd.sutd.edu.sg/people/faculty/tony-quek">Tony Quek</a></p>. Prior to that, I received my B.E. in Mathematical Sciences at Fudan University in July 2018.</p>
       <p>My research interests lie in deep learning, computer vision, and data mining.</p>
       </section>
