--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         <a href="mailto:jingyi_xu@mymail.sutd.edu.sg" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
         <a href="http://github.com/Aralas"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
       </header>
       <section>
       <h3>
-      <img src="jingyi.jpg" height="300" width="180"></h3>
-      <p>I am a second-year Ph.D. student in the <a href="https://istd.sutd.edu.sg/">Information Systems Technology and Design (ISTD) pillar</a> at <a href="https://sutd.edu.sg/">Singapore University of Technology and Design</a></p>. I am currently advised by Prof. <a href="https://istd.sutd.edu.sg/people/faculty/ernest-chong">Ernest Chong</a></p> and Prof. <a href="https://istd.sutd.edu.sg/people/faculty/tony-quek">Tony Quek</a></p>. Prior to that, I received my B.E. in Mathematical Sciences at Fudan University in July 2018.</p>
+      <img src="jingyi.jpg" height="300" width="220"></h3>
+      <p>I am a second-year Ph.D. student in the <a href="https://istd.sutd.edu.sg/">Information Systems Technology and Design (ISTD) pillar</a> at <a href="https://sutd.edu.sg/">Singapore University of Technology and Design</a>. I am currently advised by Prof. <a href="https://istd.sutd.edu.sg/people/faculty/ernest-chong">Ernest Chong</a> and Prof. <a href="https://istd.sutd.edu.sg/people/faculty/tony-quek">Tony Quek</a>. Prior to that, I received my B.E. in Mathematical Sciences at Fudan University in July 2018.</p>
       <p>My research interests lie in deep learning, computer vision, and data mining.</p>
       </section>
       <footer>
